2003-09-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/GNUmakefile: always trace pfa fonts.

	* configure.in: require mftrace. 

	* lily/staff-performer.cc (new_instrument_string): don't look at
	instrument property.

	* lily/lily-guile.cc: renaming, ly_dir_p is the Scheme function,
	is_direction is the C++ one. Similar for ly_axis_p and
	ly_number_pair_p

2003-09-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (brew_molecule): read gap-count to determine
	number of tremolo (gapped) beams.

	* lily/chord-tremolo-engraver.cc (acknowledge_grob): repeats
	shorter than 1/8

	* flower/include/array.hh (default_compare): new function

	* cygwin/mknetrel: Native fixes.

	* cygwin/GNUmakefile (EXTRA_DIST_FILES): Add mknetrel.*

2003-09-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.texi: Add note about .ly double click
	feature for Windows.

	* stepmake/stepmake/generic-vars.make: Cygwin fix from stable.

	* cygwin/mknetrel: Updates for native use on Cygwin.

	* lily/parser.yy: Compile fix: add stdio.h for snprintf.

	* stepmake/stepmake/help2man-rules.make: 
	* cygwin/mknetrel: Bugfix for manpages.

	* GNUmakefile.in (SUBDIRS): Use plain srcdir stepmake instead of
	$(builddir).  Stepmake is a normal subdirectory now, that is not
	configured.  Another srcdir build fix.

	* Documentation/topdocs/INSTALL.texi,
	buildscripts/lilypond.words.py, lilypond-font-lock.el,
	lilypond-init.el, lilypond-mode.el, debian/rules,
	make/lilypond.{redhat,madrake,suse}.spec.in, vimrc:
	rename generated file lilypond.words to lilypond.words.el.

2003-09-20  Heikki Junes  <hjunes@cc.hut.fi>

	* ly/chord-modifiers-init.ly, lilypond.vim: updates for vim.

	* GNUmakefile.in, buildscripts/lilypond.words: give only path in
	GNUmakefile.in.

2003-09-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/help2man-rules.make: Allow manpages to fail
	when cross building.

	* configure.in: srcdir build fix.

	* cygwin/GNUmakefile:
	* cygwin/lily-wins.py: